# Copy images to specified lang dir

# img_gen = generator(cp,
#     #depends: pot_dependencies,
#     output: '@PLAINNAME@',
#     arguments : [
#         '@INPUT@',
#         '@OUTPUT@',
#     ])

# # use test_images_C_path for now

# all_img_gens = {}
# foreach lang : target_linguas
#   lang_img_gens = []
#   foreach img_file: test_images_C_path
#     gen_imgs = img_gen.process(
#         img_file,
#         preserve_path_from: meson.current_source_dir(),
#     )
#     lang_img_gens += gen_imgs
#     img_gens = {lang: lang_img_gens}
#     all_img_gens += img_gens
#   endforeach
# endforeach
